--- a/test/package/CMakeLists.txt
+++ b/test/package/CMakeLists.txt
@@ -113,7 +113,11 @@ foreach(test_src ${rocrand_pkg_TEST_SRCS})
         target_include_directories(${test_name} PRIVATE ${CUDA_INCLUDE_DIRS})
         target_link_libraries(${test_name} PRIVATE ${CUDA_LIBRARIES})
     else()
-        target_link_libraries(${test_name} PRIVATE hip::device)
+        target_link_libraries(${test_name} PRIVATE hip::host)
+        # HIP on Windows: xhip is required with clang++ to get __half defined
+        if (WIN32)
+            target_compile_options(${test_name} PRIVATE "$<$<COMPILE_LANGUAGE:CXX>:-xhip>")
+        endif()
     endif()
     add_relative_test(${test_name} ${test_name})
     if (WIN32 AND NOT DEFINED DLLS_COPIED)
