--- a/docs/.sphinx/_toc.yml.in
+++ b/docs/.sphinx/_toc.yml.in
@@ -1,13 +1,16 @@
 # Anywhere {branch} is used, the branch name will be substituted.
 # These comments will also be removed.
+defaults:
+  numbered: False
+  maxdepth: 5
 root: index
 subtrees:
+- entries:
+  - file: what-is-rocrand
+  - file: installing
+  - file: programmers-guide
+  - title: API reference
+  subtrees:
   - entries:
-    - file: what-is-rocrand
-    - file: installing
-    - file: programmers-guide
-    - title: API reference
-      subtrees:
-      - entries:
-        - file: cpp-api
-        - file: python-api
+    - file: cpp-api
+    - file: python-api
