--- a/docs/.sphinx/_toc.yml.in
+++ b/docs/.sphinx/_toc.yml.in
@@ -11,7 +11,7 @@ subtrees:
   - file: .doxygen/html/index
   - file: ../../library/src/fortran/README
   - file: what-is-rocrand
-  - caption: API reference
+  :caption: API reference
     subtrees:
       - entries:
         - file: cpp-api
