--- a/docs/.sphinx/_toc.yml.in
+++ b/docs/.sphinx/_toc.yml.in
@@ -11,6 +11,7 @@ subtrees:
   - file: .doxygen/html/index
   - file: ../../library/src/fortran/README
   - file: what-is-rocrand
+  .. toctree::
   :caption: API reference
     subtrees:
       - entries:
