--- a/docs/.sphinx/_toc.yml.in
+++ b/docs/.sphinx/_toc.yml.in
@@ -5,15 +5,14 @@ defaults:
   maxdepth: 7
 root: index
 subtrees:
-- entries:
-  - file: installing
-  - file: programmers-guide
-  - file: .doxygen/html/index
-  - file: ../../library/src/fortran/README
-  - file: what-is-rocrand
-  - caption: API reference
-    - entries:
-      - file: cpp-api
-      - file: python-api
+  - entries:
+    - file: installing
+    - file: programmers-guide
+    - file: .doxygen/html/index
+    - file: ../../library/src/fortran/README
+    - file: what-is-rocrand
+- caption: API reference
+  entries:
+    - file: cpp-api
+    - file: python-api
 
-  
