Update CODEOWNERS file

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,4 +3,4 @@ docs/* @saadrahim @LisaDelaney
 *.md  @saadrahim @LisaDelaney
 *.rst  @saadrahim @LisaDelaney
 # Header directory
-library/include/*  @saadrahim @LisaDelaney
+library/include/*  @stanleytsang-amd @umfranzw @RobsonRLemos @lawruble13 @saadrahim @LisaDelaney
