--- a/docs/.sphinx/_toc.yml.in
+++ b/docs/.sphinx/_toc.yml.in
@@ -5,11 +5,11 @@ subtrees:
   - entries:
     - file: installing
     - file: programmers-guide
-    - file: fortran-README
     - file: what-is-rocrand
   - caption: API reference
     entries:
       - file: cpp-api
       - file: python-api
+      - file: fortran-api-reference
       - file: .doxygen/html/index
 
