--- a/docs/.sphinx/_toc.yml.in
+++ b/docs/.sphinx/_toc.yml.in
@@ -7,9 +7,9 @@ subtrees:
     - file: programmers-guide
     - file: what-is-rocrand
     - file: api-reference-home
+      title: API reference
       subtrees:
       - entries:
         - file: cpp-api
         - file: python-api
         - file: .doxygen/html/index
-        
