--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -520,6 +520,8 @@ test:nvcc-install:
 
 test:doc:
   stage: test
+  variables:
+    SPHINX_DIR: $DOCS_DIR/sphinx
   extends:
     - .rules:test
     - .build:docs
