--- a/docs/sphinx/_toc.yml.in
+++ b/docs/sphinx/_toc.yml.in
@@ -4,10 +4,13 @@ root: index
 subtrees:
   - entries:
     - file: installing
-    - file: data-type-support
-    - file: programmers_guide
-    - file: cpp_api
-    - file: python_api
-  - caption: About
-    entries:
-    - file: license
+    - file: programmers-guide
+    - file: what-is-rocrand
+    - file: api-reference-home
+      title: API reference
+      subtrees:
+      - entries:
+        - file: cpp-api
+        - file: python-api
+        - file: curand-compatibility
+        - file: doxygen/html/index
