Remove "OR TRUE" used for testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ list(APPEND CMAKE_MODULE_PATH
 
 # Detect if already using HIP language
 get_property(ENABLED_LANGUAGES GLOBAL PROPERTY ENABLED_LANGUAGES)
-if(HIP IN_LIST ENABLED_LANGUAGES OR TRUE)
+if(HIP IN_LIST ENABLED_LANGUAGES)
   # do stuff
   set(ROCRAND_LANG HIP)
   if (DEFINED CACHE{CMAKE_CXX_COMPILER} AND (CMAKE_CXX_COMPILER MATCHES ".*hipcc$" OR CMAKE_CXX_COMPILER MATCHES ".*clang\\+\\+"))
