--- a/docs/sphinx/_toc.yml.in
+++ b/docs/sphinx/_toc.yml.in
@@ -3,9 +3,9 @@
 root: index
 subtrees:
   - entries:
+    - file: what-is-rocrand
     - file: installing
     - file: programmers-guide
-    - file: what-is-rocrand
     - file: api-reference-home
       title: API reference
       subtrees:
@@ -14,3 +14,7 @@ subtrees:
         - file: python-api
         - file: curand-compatibility
         - file: doxygen/html/index
+
+  - caption: About
+    entries:
+    - file: license
