Use hip_runtime's uint4

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -48,7 +48,12 @@ function(rocrand_add_tool TARGET_NAME)
 endfunction()
 
 rocrand_add_tool(bin2typed bin2typed.cpp)
-rocrand_add_tool(lfsr113_precomputed_generator lfsr113_precomputed_generator.cpp)
+if(HIP_COMPILER STREQUAL "nvcc")
+    message(STATUS "Target lfsr113_precomputed_generator cannot be built for CUDA")
+else()
+    rocrand_add_tool(lfsr113_precomputed_generator lfsr113_precomputed_generator.cpp)
+    target_link_libraries(lfsr113_precomputed_generator hip::device)
+endif()
 rocrand_add_tool(mrg31k3p_precomputed_generator mrg31k3p_precomputed_generator.cpp)
 rocrand_add_tool(mrg32k3a_precomputed_generator mrg32k3a_precomputed_generator.cpp)
 rocrand_add_tool(mt19937_precomputed_generator mt19937_precomputed_generator.cpp)
