--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -203,7 +203,12 @@ else()
 endif()
 
 if( HIP_RUNTIME_LOWER STREQUAL "rocclr" )
-    rocm_package_add_dependencies("hip-rocclr >= 3.5.0")
+    if(BUILD_ADDRESS_SANITIZER)
+        set(DEPENDS_HIP_RUNTIME "hip-runtime-amd-asan" )
+    else()
+        set(DEPENDS_HIP_RUNTIME "hip-runtime-amd" )
+    endif()
+    rocm_package_add_dependencies("${DEPENDS_HIP_RUNTIME} >= 4.5.0")
 elseif( HIP_RUNTIME STREQUAL "cuda" )
     rocm_package_add_dependencies("hip-nvcc >= 3.5.0")
 endif( )
