Cherry pick docs reorg changes for 6.1.0 (#479)
* Add documentation for supported data types (#423)

* Add documentation for supported data types

* Add to toc.yml

* Fix data-type-support documentation

---------

Co-authored-by: Matthias Knorr <matthias@streamhpc.com>

* rocRAND documentation restructure (#421)

* Bump rocm-docs-core[api_reference] from 0.38.0 to 0.38.1 in /docs/sphinx (#475)

Bumps [rocm-docs-core[api_reference]](https://github.com/RadeonOpenCompute/rocm-docs-core) from 0.38.0 to 0.38.1.
- [Release notes](https://github.com/RadeonOpenCompute/rocm-docs-core/releases)
- [Changelog](https://github.com/ROCm/rocm-docs-core/blob/develop/CHANGELOG.md)
- [Commits](https://github.com/RadeonOpenCompute/rocm-docs-core/compare/v0.38.0...v0.38.1)

---
updated-dependencies:
- dependency-name: rocm-docs-core[api_reference]
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* resolved merge conflict

* regenerate requirements.txt

* fix broken links in index.rst

* Update what-is-rocrand.rst

* fixing typos and updating the TOC

* reword what-is-rocrand

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: Istvan Kiss <neon60@gmail.com>
Co-authored-by: Matthias Knorr <matthias@streamhpc.com>
Co-authored-by: srawat <120587655+SwRaw@users.noreply.github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Lisa <lisajdelaney@gmail.com>

--- a/docs/sphinx/_toc.yml.in
+++ b/docs/sphinx/_toc.yml.in
@@ -3,10 +3,17 @@
 root: index
 subtrees:
   - entries:
+    - file: what-is-rocrand
     - file: installing
-    - file: programmers_guide
-    - file: cpp_api
-    - file: python_api
+    - file: programmers-guide
+    - file: api-reference-home
+      title: API reference
+      subtrees:
+      - entries:
+        - file: cpp-api
+        - file: python-api
+        - file: curand-compatibility
+        - file: doxygen/html/index
   - caption: About
     entries:
     - file: license
