--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -56,6 +56,10 @@ jobs:
         # see https://docs.github.com/en/code-security/code-scanning/creating-an-advanced-setup-for-code-scanning/customizing-your-advanced-setup-for-code-scanning.
         # If you are analyzing a compiled language, you can modify the 'build-mode' for that language to customize how
         # your codebase is analyzed, see https://docs.github.com/en/code-security/code-scanning/creating-an-advanced-setup-for-code-scanning/codeql-code-scanning-for-compiled-languages
+
+    container:
+      image: rocm/dev-ubuntu-22.04:6.1
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -84,7 +88,6 @@ jobs:
         echo 'Using "manual" build mode'
         echo 'Building library with install script'
         ./install --install
-
         exit 1
 
     - name: Perform CodeQL Analysis
