--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -65,7 +65,9 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Install CMake
-      run: sudo apt-get install cmake  # Adjust based on your package manager
+      run: |
+        sudo apt-get update
+        sudo apt-get install cmake
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
