--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -67,7 +67,7 @@ jobs:
     - name: Install CMake
       run: |
         sudo apt-get update
-        sudo apt-get install cmake
+        sudo apt-get install -y cmake
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
