Remove exit 1 and add echo descriptions

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -94,12 +94,12 @@ jobs:
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
     - if: matrix.build-mode == 'manual'
       run: |
-        echo 'Using manual build mode'
+        echo 'Manual build mode'
+        echo 'Configure environment variables for ROCm'
         export ROCM_PATH=/opt/rocm
         export CMAKE_PREFIX_PATH=/opt/rocm:/opt/rocm/bin:/opt/rocm/include:/opt/rocm/lib
         echo 'Building library with install script'
         ./install --install
-        exit 1
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
