--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -11,7 +11,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install clang-format
-      run: sudo apt-get install -y clang-format
+      run: sudo apt-get install -y clang-format-17
 
     - name: Check Clang-Format on Diff
       run: |
