--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -10,8 +10,14 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Install clang-format
-      run: sudo apt-get install -y clang-format-17
+    - name: Add LLVM Repository
+      run: |
+        sudo add-apt-repository "deb http://apt.llvm.org/jammy llvm-toolchain-jammy-17 main"
+        sudo apt-get update
+
+    - name: Install clang-format 17
+      run: |
+        sudo apt-get install clang-format-17
 
     - name: Check Clang-Format on Diff
       run: |
