--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -82,9 +82,20 @@ jobs:
         # If you wish to specify custom queries, you can do so here or in a config file.
         # By default, queries listed here will override any specified in a config file.
         # Prefix the list here with "+" to use these queries and those in the config file.
+        queries: |
+          security-extended
+          security-and-quality
 
         # For more details on CodeQL's query packs, refer to: https://docs.github.com/en/code-security/code-scanning/automatically-scanning-your-code-for-vulnerabilities-and-errors/configuring-code-scanning#using-queries-in-ql-packs
         # queries: security-extended,security-and-quality
+
+    - name: Update CodeQL Database
+    uses: github/codeql-action/init@v3
+    with:
+      update: true
+      languages: ${{ matrix.language }}
+      build-mode: ${{ matrix.build-mode }}
+      # other configuration options as needed
 
     # If the analyze step fails for one of the languages you are analyzing with
     # "We were unable to automatically build your code", modify the matrix above
