--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -25,12 +25,12 @@ jobs:
 
     - name: Check Clang-Format on Diff
       run: |
-        ./clang-format-diff.sh ${{ github.base_ref }} ${{ github.ref }}
+        ./clang-format-diff.sh ${{ github.base_ref }} ${{ github.head_ref }}
 
     - name: Apply Clang-Format locally
       if: github.event_name == 'pull_request'
       run: |
-        ./clang-format-apply.sh ${{ github.base_ref }} ${{ github.ref }}
+        ./clang-format-apply.sh ${{ github.base_ref }} ${{ github.head_ref }}
 
     - name: Suggest changes
       uses: parkerbxyz/suggest-changes@v1
