--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -23,6 +23,11 @@ jobs:
       run: |
         sudo apt-get install clang-format-17
 
+    - name: Fetch branches to check
+      run: |
+        git fetch origin ${{ github.base_ref }}
+        git fetch origin ${{ github.head_ref }}
+
     - name: Check Clang-Format on Diff
       run: |
         ./clang-format-diff.sh ${{ github.base_ref }} ${{ github.head_ref }}
