--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -35,7 +35,7 @@ jobs:
           git fetch origin ${{ github.head_ref }}
         fi
 
-    - name: Apply Clang-Format locally
+    - name: Apply clang-format locally
       if: github.event_name == 'pull_request'
       run: |
         if [ "${{ github.repository_owner }}" != "${{ github.event.pull_request.head.repo.owner.login }}" ]; then
@@ -44,8 +44,38 @@ jobs:
           ./clang-format-apply.sh origin/${{ github.base_ref }} origin/${{ github.head_ref }}
         fi
 
-    - name: Suggest changes
-      uses: parkerbxyz/suggest-changes@v1
-      if: github.event_name == 'pull_request'
-      with:
-        comment: 'Please make the changes suggested by clang-format'
+    - name: Save clang-format changes as patch
+      run: |
+        git diff -U0 > clang_format.patch
+
+    - name: Generate suggestions
+      run: |
+        echo "[]" > comments.json
+        while IFS= read -r line; do
+          if [[ "$line" =~ ^@@ ]]; then
+            # Get file name
+            file=$(echo "$line" | grep -oP '(?<= b/).*?(?= @@)')
+            # Get line number
+            position=$(echo "$line" | grep -oP '(?<=@@ -).*?(?= @@)' | awk '{split($0, a, " "); print a[2]}')
+            # Generate comment
+            comment=$(jq -n --arg file "$file" --arg pos "$position" '{path: $file, position: ($pos|tonumber), body: "Please apply the suggested clang-format changes."}')
+            tmp=$(mktemp)
+            jq ". += [$comment]" comments.json > "$tmp" && mv "$tmp" comments.json
+          fi
+        done < clang_format.patch
+
+    - name: Suggest changes via GitHub API
+      if: failure()
+      run: |
+        echo "Attempting to post review comments via GitHub API..."
+        PR_NUMBER="${{ github.event.pull_request.number }}"
+        COMMIT_ID=$(git rev-parse HEAD)
+        REVIEW_BODY="Please make the changes suggested by clang-format"
+        COMMENTS=$(cat comments.json)
+        curl -L \
+          -X POST \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN_CLANG }}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/${{ github.repository }}/pulls/$PR_NUMBER/reviews \
+          -d "$(jq -n --arg commit_id "$COMMIT_ID" --arg body "$REVIEW_BODY" --argjson comments "$COMMENTS" '{commit_id: $commit_id, body: $body, event: "REQUEST_CHANGES", comments: $comments}')"
